# golgi

./: .gitignore  FEATURES.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  cuff_designer.py  golgi.py  pyproject.toml  requirements-frozen.txt
examples/: README.md  recruitment_sweep.py
golgi/: __init__.py  api.py  app.py  cli.py
golgi/_golgi_assets/: golgi_export.js  golgi_vanta_64daa2b38a.js  loader_variants.js
golgi/_golgi_no_project/: conductivities.json
golgi/actions/: __init__.py  auth.py  bundle_import.py  cancel_busy.py  compute.py  conductivity.py  figure_export.py  segment_uct.py  study_bundle.py  sweep.py
golgi/auth/: audit.py  decorators.py  models.py  session.py
golgi/compute/: gmsh_mesher.py  solve_fiber_paths_bundle.py  solve_fiber_paths_nerve.py  solve_nerve.py  solve_nerve_ci.py  tetgen_runner.py
golgi/conductivity/: __init__.py  cole_cole.py  fetch_itis.py  itis_db.py  materials.py  perineurium.py
golgi/figures/: __init__.py  cole_cole.py  compare.py  cuff.py  export.py  fem.py  fiber.py  impedance.py  mesh_stats.py  population.py  recording.py  recruitment.py  registry.py  render3d.py  report.py  selectivity.py  util.py
golgi/jobs/: __init__.py  cancel.py  in_process.py  local_subprocess.py  protocol.py  schemas.py  slurm_runner.py
golgi/pipeline/: _frames.py  _throttle.py  context.py  fem.py  fem_layout.py  fiber_backends.py  fiber_sim.py  fibers.py  mesh.py  mesh_quality.py  plc.py  pop_sim.py  recording.py  selectivity.py  sweep.py
golgi/projects/: __init__.py  bundle.py  replay.py  sweep_cache.py  uct_route.py  upload_route.py
golgi/scene/: catalog.py  cuff_fit.py  electrode_patches.py  geometry.py  null_scene.py  renderer.py
golgi/segmentation/: __init__.py  bundle_import.py  deform.py  image.py  reconstruct3d.py  render.py  segmenter.py
golgi/state_defaults/: __init__.py  cuff.py  electrode.py  exports.py  fem.py  fiber.py  import_state.py  mesh.py  pop.py  pop_presets.py  study_bundle.py  sweep.py  ui_toggles.py
golgi/ui/: __init__.py  busy_lightbox.py  navbar.py  welcome.py
golgi/ui/components/: __init__.py  figure_export_btn.py  viewport_export_btn.py
golgi/ui/dialogs/: __init__.py  auth.py  bundle_import.py  cancel_busy.py  close_project.py  cole_cole.py  confirm_delete_electrode.py  confirm_delete_mesh.py  confirm_delete_project.py  confirm_remove_geometry.py  cuff_designer.py  export_study.py  generate_report.py  import_stepper.py  import_study.py  logout.py  new_project.py  profile.py  project_detail.py  segment_uct.py  sweep_designs.py  sweep_manual.py  sweep_random.py
golgi/ui/drawers/: __init__.py  _helpers.py  analysis.py  conductivities.py  cuff_electrodes.py  exports.py  fibers.py  import_drawer.py  mesh.py
golgi/watchers/: __init__.py  auth_upload.py  cole_cole.py  cuff.py  cuff_designer.py  drawer_exclusion.py  fem_panel.py  fiber_panel.py  import_panel.py  project_detail.py  render_toggles.py  sigma.py
paper_figs/: _m1_golgi_cylinder.py  cohort_table.py  comsol_validation_fig.py  fetch_bundles.py  fig02_render.py  fig02_setup.py  fig04_validation.py  fig05_06_species.py  fig06_selectivity.py  fig07_rabbit_selectivity.py  fig08_human_selectivity.py  fig3_render.py  fig3_setup.py  fig5_population.py  fig5_thresholds.py  fig_bucksot.py  fig_nrv.py  fig_species.py  fig_supp_cohort.py  fig_validation_full.py  gen_s1_table.py  human_bundle_fem.py  human_bundle_mesh.py  io_paths.py  make_figures.py  make_release_package.py  make_study_bundles.py  new_human3d_prep.py  new_human3d_traj.py  new_human_fem.py  new_human_mesh.py  new_human_render.py  new_human_selectivity_fig.py  new_human_steer_opt.py  new_human_sweep.py  new_human_tripole_analyze.py  new_human_tripole_sweep_build.py  new_human_xsec_contours.py  pulse_figure.py  rabbit_fem.py  (+30 more)
resources/cuffs/: LivaNova2000_v2.json  LivaNova2000_v2_3D.json  LivaNova3000_v2.json  LivaNova3000_v2_3D.json  MultiContact_threed_2000.json  MultiContact_threed_2000_3D.json  MultiContact_threed_3000.json  MultiContact_threed_3000_3D.json
resources/styles/: golgi.css
resources/tissue_db/: README.md
tests/: README.md  fake_sbatch.py  test_headless_api.py  test_recording_cable.py
wiki/: Architecture.md  Authentication-and-Audit.md  Command-Line-Interface.md  Conductivity-and-Tissue-Properties.md  Configuration-Reference.md  Contributing.md  Electrodes-and-Cuff-Designer.md  Fiber-Models-and-Activation.md  Fiber-Populations-and-Trajectories.md  Figures-and-Reports.md  Finite-Element-Solver.md  GUI-Walkthrough.md  Geometry-Import-and-Segmentation.md  Getting-Started.md  Glossary.md  Headless-and-HPC.md  Home.md  Installation.md  License-and-Citation.md  Meshing.md  Pipeline-Overview.md  Python-API.md  README.md  Recording-and-CNAP.md  Recruitment-Sweeps-and-Selectivity.md  Reproducible-Study-Bundles.md  Reproducing-the-Paper.md  Troubleshooting-and-FAQ.md  Validation.md  _Footer.md  _Sidebar.md  preview.html
