[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "golgi"
version = "1.0.0"
description = "Anatomically realistic, reproducible image-to-population modeling of peripheral nerve stimulation."
readme = "README.md"
requires-python = ">=3.10"
# PEP 639 SPDX license expression. golgi links Gmsh (GPLv2+) and TetGen
# (AGPLv3, via the `tetgen` module) and serves a Trame network GUI, so the
# whole work is AGPL-3.0-or-later. See THIRD_PARTY_LICENSES.md.
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "THIRD_PARTY_LICENSES.md"]
authors = [
    { name = "David Lung" },
    { name = "Yuting Jia" },
    { name = "Andrea Moro" },
    { name = "Matteo Fachino" },
    { name = "Max Haberbusch", email = "max.haberbusch@meduniwien.ac.at" },
]
# NOTE (PEP 639 / setuptools >= 77): the SPDX `license` expression above
# supersedes the "License :: OSI Approved :: GNU Affero General Public
# License v3 or later (AGPLv3+)" Trove classifier — the two must not be
# combined, so the license classifier is intentionally omitted.
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# Runtime dependencies resolvable from PyPI. The compiled FEniCSx core
# (fenics-dolfinx, petsc4py, mpi4py, ufl) is intentionally NOT listed — it is
# provided by conda/mamba (see Installation). Versions are left unpinned so pip
# leaves any build already supplied by the conda environment untouched and only
# fetches what is missing.
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pillow",
    "h5py",
    "tifffile",
    "scikit-image",
    "SimpleITK",
    "opencv-python",
    "bcrypt",
    "SQLAlchemy",
    "aiohttp",
    "trame",
    "trame-vuetify",
    "trame-vtk",
    "pytest",
    "pyvista",
    "vtk",
    "gmsh",
    "tetgen",
    "meshio",
    "trimesh",
    "pymeshfix",
    "pyacvd",
    "optimesh",
    "mapbox_earcut",
    "plotly",
    "kaleido",
]

[project.optional-dependencies]
# NEURON-based biophysical activation thresholds (requires a working NEURON).
neuron = ["pyfibers"]
# Optional GPU surrogate backend. AxonML and the SAM2 segmentation checkpoint
# are installed separately — see the Installation wiki page.
gpu = ["torch"]

[project.urls]
Homepage = "https://github.com/CellularSyntax/golgi"
Repository = "https://github.com/CellularSyntax/golgi"
Documentation = "https://github.com/CellularSyntax/golgi/wiki"
Issues = "https://github.com/CellularSyntax/golgi/issues"

# Console entry point. `golgi` with no subcommand launches the GUI server
# (equivalent to `python -m golgi.app`); `golgi export|import|replay` run the
# study-bundle CLI. Both dispatch through golgi.app:main().
[project.scripts]
golgi = "golgi.app:main"

[tool.setuptools]
packages = ["golgi"]
# cuff_designer.py is a top-level module (ASCENT-style parametric cuff
# primitives) imported by golgi.app / golgi.api / golgi.figures. Install it
# alongside the package so it is importable from the `golgi` console script,
# which — unlike `python file.py` — does not put the repo root on sys.path.
py-modules = ["cuff_designer"]

[tool.marimo.runtime]
output_max_bytes = 1_000_000_000

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end test requiring the FEniCSx solver stack + sample data (auto-skips when absent)",
]
